Fix T62508: Annotations Placement default value is not the same as factory default